      - Support Cupt-specific configuration files (/etc/cupt by default).
        New options 'cupt::directory::configuration',
        'cupt::directory::configuration::main',
        'cupt::directory::configuration::main-parts'.
      - New option 'cupt::worker::use-locks'.
      - Recognize APT variables 'dir::log', 'dir::log::terminal',
        'dir::log::history'.
    - cache:
      - 'verifySignature': is deprecated now.
    - system/resolvers/native:
      - Implemented 'reinstall or remove' for packages that require the
        reinstallation.
      - Installed packages with the status 'half-installed' also require
        the reinstallation, mark them as such. (Closes: #637490)
    - file:
      - Constructor now accepts "pw" as a special mode for shell pipes opened
        for writing.
    - system/state:
      - Add package entry to the cache even if the installed version requires
        the reinstallation. (Closes: #639605)
      - InstalledRecord: new method 'isBroken'.
  * doc:
    - cupt(1) manual:
      - Documented 'purge' subcommand.
      - Fixed a typo in the description of '--download-only' option.
        (Closes: #639160)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 13 Jul 2011 09:33:27 +0300

cupt (2.1.2~) UNRELEASED; urgency=low

  * console:
    - Fixed a crash (under certain conditions) when package wildcards are
      used within the 'shell' subcommand. Thanks to Karol Kozłowski for the
      report.
  * lib:
    - Fixed a double use of va_list. Thanks to Julian Andres Klode for the
      report and the patch. (Closes: #630824)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 20 Jun 2011 19:07:35 +0300

cupt (2.1.1) unstable; urgency=low

  * lib:
    - download/manager:
      - Use poll(2) instead of SO_RCVTIMEO socket property to check for worker
        socket timeouts. Thanks to Jonathan Nieder for the report.
        (Closes: #628992, #630600)
      - Avoided creating new process groups. Fixes delivering stop/resume