@@ -112,6 +112,7 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::directory::configuration", "etc/cupt" },
 		{ "cupt::directory::configuration::main", "cupt.conf" },
 		{ "cupt::directory::configuration::main-parts", "cupt.conf.d" },
+		{ "cupt::directory::log", "var/log/cupt.log" },
 		{ "cupt::directory::state", "var/lib/cupt" },
 		{ "cupt::directory::state::lists", "lists" },
 		{ "cupt::directory::state::snapshots", "snapshots" },
@@ -160,10 +161,15 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::worker::archives-space-limit", "0" },
 		{ "cupt::worker::defer-triggers", "no" },
 		{ "cupt::worker::download-only", "no" },
+		{ "cupt::worker::log", "yes" },
+		{ "cupt::worker::log::levels::metadata", "1" },
+		{ "cupt::worker::log::levels::packages", "2" },
+		{ "cupt::worker::log::levels::snapshots", "1" },
 		{ "cupt::worker::purge", "no" },
 		{ "cupt::worker::simulate", "no" },
 		{ "cupt::worker::use-locks", "yes" },
 		{ "debug::downloader", "no" },
+		{ "debug::logger", "no" },
 		{ "debug::resolver", "no" },
 		{ "debug::worker", "no" },
 		{ "debug::gpgv", "no" },
